--- a/src/Changelog/package.json
+++ b/src/Changelog/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.11",
-    "systemjs": "0.19.24"
+    "systemjs": "0.19.24",
+    "rxjs": "5.0.0-beta.9" 
   }
 }
