--- a/src/Changelog/scripts/tsconfig.json
+++ b/src/Changelog/scripts/tsconfig.json
@@ -3,10 +3,15 @@
     "noImplicitAny": true,
     "noEmitOnError": true,
     "sourceMap": true,
-    "target": "es2015"
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "target": "es5"
   },
   "files": [
-    "./app.ts"
+      "./app.ts",
+      "./model.ts",
+      "./main.ts",
+      "../typings/index.d.ts"
   ],
   "compileOnSave": true
 }
