--- a/src/ChangelogApi/project.json
+++ b/src/ChangelogApi/project.json
@@ -2,6 +2,12 @@
   "userSecretsId": "aspnet-ChangelogApi-5bffbe74-7b2a-4470-ab30-ca7a3f83bead",
 
   "dependencies": {
+    "Microsoft.Extensions.SecretManager.Tools": "1.1.0-preview4-final",
+    "Microsoft.Extensions.Configuration.UserSecrets": "1.1.0",
+    "Microsoft.Extensions.CommandLineUtils": "1.1.0",
+    "Microsoft.Extensions.Logging": "1.1.0",
+    "Newtonsoft.Json": "9.0.1",
+    "System.Runtime.Serialization.Primitives": "4.3.0",  
     "Microsoft.AspNetCore.Mvc": "1.1.1",
     "Microsoft.AspNetCore.Mvc.ApiExplorer": "1.1.1",
     "Microsoft.AspNetCore.Mvc.Cors": "1.1.1",
@@ -9,12 +15,22 @@
     "Microsoft.AspNetCore.Mvc.Formatters.Json": "1.1.1",
     "Microsoft.AspNetCore.Mvc.Localization": "1.1.1",
     "Microsoft.AspNetCore.Mvc.Razor": "1.1.1",
-    "Microsoft.AspNetCore.Mvc.TagHelpers" : "1.1.1",
+    "Microsoft.AspNetCore.Mvc.TagHelpers": "1.1.1",
     "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.1.1",
     "Microsoft.Extensions.Caching.Memory": "1.1.0",
     "Microsoft.Extensions.DependencyInjection": "1.1.0",
+    "Microsoft.AspNetCore.Identity": "1.1.0",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.0",
+    "Microsoft.EntityFrameworkCore.Relational": "1.1.0",
+    "Microsoft.AspNetCore.Authentication.Cookies": "1.1.0",
+    "Microsoft.AspNetCore.Cryptography.KeyDerivation": "1.1.0",
+    "Microsoft.AspNetCore.Hosting.Abstractions": "1.1.0",
     "NETStandard.Library": "1.6.1",
-
+    "Microsoft.AspNetCore.Http.Extensions": "1.1.0",
+    "Microsoft.Extensions.FileProviders.Abstractions": "1.1.0",
+    "Microsoft.Extensions.Logging.Abstractions": "1.1.0",
+    "Microsoft.Extensions.WebEncoders": "1.1.0",
+    "Microsoft.AspNetCore.StaticFiles": "1.1.0",
     "Microsoft.VisualStudio.Web.CodeGeneration.Tools": {
       "version": "1.0.0-preview2-final",
       "type": "build"
@@ -24,9 +40,16 @@
       "type": "build"
     },
     "BundlerMinifier.Core": "2.2.306",
-    "Microsoft.NETCore.App": "1.1.0",
-    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0"
-
+    "Microsoft.NETCore.App": {
+      "type": "platform",
+      "version": "1.1.0"
+    },
+    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0",
+    "Microsoft.Extensions.Logging.Console": "1.1.0",
+    "Microsoft.AspNetCore.Diagnostics": "1.1.0",
+    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0",
+    "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0",
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0"
   },
   "frameworks": {
     "netcoreapp1.0": {
