--- a/src/MockBucket/project.json
+++ b/src/MockBucket/project.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
-    "Microsoft.NETCore.App": "1.1.0",
+    "Microsoft.NETCore.App": {
+      "type": "platform",
+      "version": "1.1.0"
+    },
     "Microsoft.Extensions.CommandLineUtils": "1.1.0",
-    "Microsoft.DotNet.ProjectModel" : "1.0.0-rc3-003121",
+    "Microsoft.DotNet.ProjectModel": "1.0.0-rc3-003121",
     "System.Diagnostics.Process": "4.3.0",
     "Microsoft.AspNetCore.Mvc": "1.1.1",
     "Microsoft.AspNetCore.Routing": "1.1.0",
