--- a/src/ChangelogApi/project.json
+++ b/src/ChangelogApi/project.json
@@ -49,7 +49,8 @@
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
     "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0",
-    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0"
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
+    "IdentityServer4.AccessTokenValidation": "1.0.1"
   },
   "frameworks": {
     "netcoreapp1.0": {
